[fix](ABC-1197): Horizontal Timeline - Fix item popover overflow issue

--- a/src/modules/base/activityTimeline/horizontalActivityTimeline.css
+++ b/src/modules/base/activityTimeline/horizontalActivityTimeline.css
@@ -1,3 +1,7 @@
+.avonni-activity-timeline__container {
+    position: relative;
+}
+
 .avonni-activity-timeline__horizontal-timeline-items {
     margin: 0px;
     padding: 0px;
